# afl-strategy-dashboard

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
.streamlit/: config.toml
data/raw/: sample_attendance.csv
docs/: data_sources.md  deployment.md  methodology.md  project_case_study.md  screenshot_guide.md
docs/assets/diagrams/: architecture.md
docs/assets/reports/: sample_strategy_brief.html  sample_strategy_brief.md
scripts/: generate_sample_brief.py  smoke_check.py
src/afl_strategy_dashboard/: __init__.py  app.py
src/afl_strategy_dashboard/components/: badges.py  cards.py  charts.py  layout.py  narrative.py  tables.py
src/afl_strategy_dashboard/data/: __init__.py  attendance.py  cache.py  dashboard_state.py  squiggle_client.py
src/afl_strategy_dashboard/features/: __init__.py  competitive_balance.py  fan_growth.py  fixture_equity.py  season_phase.py  travel_load.py
src/afl_strategy_dashboard/insights/: __init__.py  recommendations.py
src/afl_strategy_dashboard/pages/: __init__.py  competitive_balance.py  export_brief.py  fan_growth.py  fixture_equity.py  overview.py  (+2 more)
tests/: test_attendance.py  test_chart_rendering.py  test_competitive_balance.py  test_deployment_assets.py  test_detail_cards.py  test_executive_brief.py  test_fan_growth.py  test_fixture_equity.py  test_plotly_template.py  test_portfolio_assets.py  test_recommendations.py  test_sample_brief_generation.py  test_season_phase.py  test_squiggle_client.py  test_table_display.py  test_travel_load.py  test_ui_helpers.py  test_venues.py
(+10 files in other folders)
